@@ -1,4 +1,4 @@
-/* $Id: conf.c,v 1.31 2004/12/16 23:08:13 manu Exp $ */
+/* $Id: conf.c,v 1.32 2005/01/29 18:42:53 manu Exp $ */
 
 /*
  * Copyright (c) 2004 Emmanuel Dreyfus
@@ -34,7 +34,7 @@
 #ifdef HAVE_SYS_CDEFS_H
 #include <sys/cdefs.h>
 #ifdef __RCSID
-__RCSID("$Id: conf.c,v 1.31 2004/12/16 23:08:13 manu Exp $");
+__RCSID("$Id: conf.c,v 1.32 2005/01/29 18:42:53 manu Exp $");
 #endif
 #endif
 
@@ -274,6 +274,7 @@ conf_defaults(c)
 	c->c_noauth = 0;
 	c->c_noaccessdb = 0;
 	c->c_nospf = 0;
+	c->c_delayedreject = 0;
 	c->c_testmode = 0;
 	c->c_delay = GLDELAY;
 	c->c_autowhite_validity = AUTOWHITE_VALIDITY;
