@@ -23,6 +23,7 @@ quiet		[Qq][Uu][Ii][Ee][Tt]
 noauth		[Nn][Oo][Aa][Uu][Tt][Hh]
 noaccessdb	[Nn][Oo][Aa][Cc][Cc][Ee][Ss][Ss][Dd][Bb]
 nospf		[Nn][Oo][Ss][Pp][Ff]
+delayedreject	[Dd][Ee][Ll][Aa][Yy][Ee][Dd][Rr][Ee][Jj][Cc][Tt]
 testmode	[Tt][Ee][Ss][Tt][Mm][Oo][Dd][Ee]
 greylist	[Gg][Rr][Ee][Yy][Ll][Ii][Ss][Tt]:?		
 autowhite	[Aa][Uu][Tt][Oo][Ww][Hh][Ii][Tt][Ee]:?
@@ -62,7 +63,7 @@ star		"*"
 	#ifndef HAVE_BROKEN_RCSID
 	#include <sys/cdefs.h>
 	#ifdef __RCSID
-	__RCSID("$Id: conf_lex.l,v 1.32 2005/01/08 14:43:29 manu Exp $");
+	__RCSID("$Id: conf_lex.l,v 1.33 2005/01/29 18:42:53 manu Exp $");
 	#endif
 	#endif
 	#endif
@@ -88,6 +89,7 @@ star		"*"
 {greylist}	{ return GREYLIST; }
 {noauth}	{ return NOAUTH; }
 {noaccessdb}	{ return NOACCESSDB; }
+{delayedreject}	{ return DELAYEDREJECT; }
 {nospf}		{ return NOSPF; }
 {quiet}		{ return QUIET; }
 {testmode}	{ return TESTMODE; }
