@@ -1,4 +1,4 @@
-%token TNUMBER ADDR IPADDR IP6ADDR CIDR FROM RCPT EMAIL PEER AUTOWHITE GREYLIST NOAUTH NOACCESSDB NOSPF QUIET TESTMODE VERBOSE PIDFILE GLDUMPFILE PATH TDELAY SUBNETMATCH SUBNETMATCH6 SOCKET USER NODETACH REGEX REPORT NONE DELAYS NODELAYS ALL LAZYAW GLDUMPFREQ GLTIMEOUT DOMAIN DOMAINNAME SYNCADDR PORT ACL WHITELIST DEFAULT STAR
+%token TNUMBER ADDR IPADDR IP6ADDR CIDR FROM RCPT EMAIL PEER AUTOWHITE GREYLIST NOAUTH NOACCESSDB NOSPF QUIET TESTMODE VERBOSE PIDFILE GLDUMPFILE PATH TDELAY SUBNETMATCH SUBNETMATCH6 SOCKET USER NODETACH REGEX REPORT NONE DELAYS NODELAYS ALL LAZYAW GLDUMPFREQ GLTIMEOUT DOMAIN DOMAINNAME SYNCADDR PORT ACL WHITELIST DEFAULT STAR DELAYEDREJECT
 
 %{
 #include "config.h"
@@ -6,7 +6,7 @@
 #ifdef HAVE_SYS_CDEFS_H
 #include <sys/cdefs.h>
 #ifdef __RCSID  
-__RCSID("$Id: conf_yacc.y,v 1.32 2004/12/19 19:55:05 manu Exp $");
+__RCSID("$Id: conf_yacc.y,v 1.33 2005/01/29 18:42:53 manu Exp $");
 #endif
 #endif
 
@@ -67,6 +67,7 @@ lines	:	lines netblock '\n'
 	|	lines noauth '\n' 
 	|	lines noaccessdb '\n' 
 	|	lines nospf '\n' 
+	|	lines delayedreject '\n' 
 	|	lines testmode '\n' 
 	|	lines autowhite '\n'
 	|	lines greylist '\n'
@@ -215,6 +216,8 @@ noauth:		NOAUTH	{ if (C_NOTFORCED(C_NOAUTH)) conf.c_noauth = 1; }
 noaccessdb:	NOACCESSDB	{ conf.c_noaccessdb = 1; }
 	;
 nospf:		NOSPF	{ if (C_NOTFORCED(C_NOSPF)) conf.c_nospf = 1; }
+	;
+delayedreject:	DELAYEDREJECT	{ conf.c_delayedreject = 1; }
 	;
 testmode:	TESTMODE{ if (C_NOTFORCED(C_TESTMODE)) conf.c_testmode = 1; }
 	;
