@@ -1,7 +1,7 @@
 #
 # Greylisting config file
 #
-# $Id: greylist.conf,v 1.23 2005/01/29 18:22:28 manu Exp $
+# $Id: greylist.conf,v 1.24 2005/01/29 18:42:53 manu Exp $
 #
 
 # Uncomment this to enable verbose output.
@@ -66,6 +66,15 @@ acl whitelist addr 127.0.0.0/8
 # causes a header to always be added. Other possible
 # values are none, delays and nodelays
 #report all
+
+# This option attempts to make milter-greylist more
+# friendly with sender callback systems. When the
+# message is from <>, it will be temporarilly 
+# rejected at the DATA stage instead of the RCPT
+# stage of the SMTP transaction. In the case of a 
+# multi recipient DSN, whitelisted recipient will
+# not be honoured.
+#delayedreject
 
 #
 # All of the following options have command-line equivalents.
