@@ -5,6 +5,7 @@
 	Differentiate errors in dump file and config file
 	Fix a build problem if getaddrinfo is absent (Lev Walkin)
 	Don't sync with local addresses on FreeBSD 4.9 (Lev Walkin)
+	Add a commented line for ::1 whitelisting in greylist.conf
 1.7.4:
 	M4 file for easier sendmail.cf generation (Ivan F. Martinez)
 	.spec file for generating RPM (Ivan F. Martinez)
